--- a/Set/Base.lproj/Main.storyboard
+++ b/Set/Base.lproj/Main.storyboard
@@ -274,6 +274,9 @@
                                         <state key="normal" title="Deal">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="dealCards:" destination="BYZ-38-t0r" eventType="touchUpInside" id="doZ-jn-KaN"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -291,6 +294,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="dealButton" destination="sO4-4s-ZHT" id="rtB-fd-R4Z"/>
                         <outletCollection property="cardButtons" destination="S9Z-uQ-xi5" collectionClass="NSMutableArray" id="Udo-rA-N5w"/>
                         <outletCollection property="cardButtons" destination="Dcf-OY-FFf" collectionClass="NSMutableArray" id="nMo-Tq-0Wv"/>
                         <outletCollection property="cardButtons" destination="qwH-4J-CP7" collectionClass="NSMutableArray" id="IlR-3v-4Wd"/>
