--- a/Set/Base.lproj/Main.storyboard
+++ b/Set/Base.lproj/Main.storyboard
@@ -61,7 +61,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NC0-CP-Bw6" customClass="SetBoardView" customModule="Set" customModuleProvider="target">
                                 <rect key="frame" x="16" y="90.333333333333314" width="343" height="610.66666666666674"/>
                                 <subviews>
-                                    <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mmc-rj-D2F" customClass="SetCardView" customModule="Set" customModuleProvider="target">
+                                    <view hidden="YES" opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mmc-rj-D2F" customClass="SetCardView" customModule="Set" customModuleProvider="target">
                                         <rect key="frame" x="1" y="21.333333333333371" width="342" height="569"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
@@ -70,7 +70,7 @@
                                         </constraints>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" red="1" green="0.83234566450000003" blue="0.47320586440000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Mmc-rj-D2F" secondAttribute="bottom" id="8oY-3F-fCQ"/>
                                     <constraint firstItem="Mmc-rj-D2F" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="NC0-CP-Bw6" secondAttribute="leading" id="ZIw-NP-htg"/>
