Add a swipe down gesture to Deal 3 More Cards, add a rotation gesture to shuffle cards

--- a/Set/Base.lproj/Main.storyboard
+++ b/Set/Base.lproj/Main.storyboard
@@ -52,7 +52,7 @@
                                             <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         </variation>
                                         <connections>
-                                            <action selector="dealCards:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZjH-Qi-RnG"/>
+                                            <action selector="touchDealCardsButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ifl-aj-zY0"/>
                                         </connections>
                                     </button>
                                 </subviews>
