--- a/Set/Base.lproj/Main.storyboard
+++ b/Set/Base.lproj/Main.storyboard
@@ -29,8 +29,8 @@
                                 <rect key="frame" x="0.0" y="90.333333333333314" width="375" height="568.66666666666674"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ots-wu-1f3">
-                                <rect key="frame" x="207" y="37.666666666666664" width="152" height="38.999999999999993"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <rect key="frame" x="207" y="38.333333333333336" width="152" height="38.000000000000007"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <state key="normal" title="NewGame">
                                     <color key="titleColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
@@ -45,10 +45,13 @@
                                         <rect key="frame" x="0.0" y="0.0" width="122.33333333333333" height="121.66666666666667"/>
                                         <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                        <state key="normal" title="Set!(0)">
+                                        <state key="normal" title="Set!(11)">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <variation key="heightClass=compact" hidden="YES"/>
+                                        <variation key="widthClass=compact">
+                                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        </variation>
                                         <connections>
                                             <action selector="player1TouchSet:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pO9-se-LAM"/>
                                         </connections>
@@ -73,10 +76,13 @@
                                         <rect key="frame" x="252.66666666666666" y="0.0" width="122.33333333333334" height="121.66666666666667"/>
                                         <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                        <state key="normal" title="Set!(0)">
+                                        <state key="normal" title="Set!(11)">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <variation key="heightClass=compact" hidden="YES"/>
+                                        <variation key="widthClass=compact">
+                                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        </variation>
                                         <connections>
                                             <action selector="player2TouchSet:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VN9-Cc-CwL"/>
                                         </connections>
